# playdate_util_libs

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  install.sh  support.cmake
cmake_support/: CompilationConf.cmake  Setup.cmake
pd_image_utils/: CMakeLists.txt
pd_image_utils/src/: pd_image_utils.c  pd_image_utils.h
pd_scene_engine/: CMakeLists.txt  README.md
pd_scene_engine/src/: pd_scene.c  pd_scene.h
pd_shorthand/: CMakeLists.txt  README.md
pd_shorthand/src/: pd_shorthand.c  pd_shorthand.h
pd_text/: CMakeLists.txt  README.md
pd_text/src/: pd_text.c  pd_text.h
scene_engine/: CMakeLists.txt  README.md
scene_engine/src/: scene.c  scene.h
shorthand/: CMakeLists.txt
shorthand/src/: pd_shorthand.c
support/: CMakeLists.txt  README.md
support/src/: pd_utils.c  pd_utils.h
